# oasis7

./: .gitignore  AGENTS.md  Cargo.toml  README.md  human.md  skills-lock.json  testing-manual.md  world-rule.md
crates/oasis7/: Cargo.toml
crates/oasis7/src/: consensus_action_payload.rs  geometry.rs  hosted_access.rs  launcher_bootstrap_peers.rs  lib.rs  models.rs  network_tier_manifest.rs  observability.rs
crates/oasis7/src/runtime/: agent_claims.rs  builtin_wasm_materializer.rs  events.rs  gameplay_state.rs  governance.rs  m1_builtin_wasm_artifact.rs  m4_builtin_wasm_artifact.rs  m5_builtin_wasm_artifact.rs  main_token.rs  mod.rs  rules.rs  segmenter.rs  state.rs
crates/oasis7/src/runtime/events/: domain_event.rs
crates/oasis7/src/runtime/state/: apply_domain_event_core.rs  apply_domain_event_core_late.rs  apply_domain_event_gameplay.rs  apply_domain_event_gameplay_claims.rs  apply_domain_event_industry.rs  apply_domain_event_main_token.rs  apply_domain_event_main_token_economy.rs  apply_domain_event_main_token_genesis.rs  apply_domain_event_main_token_helpers.rs  apply_domain_event_main_token_restricted_claims.rs  support.rs
crates/oasis7/src/runtime/tests/: agent_claims.rs  agent_claims_auto_funding.rs  agent_claims_first_agent_approval.rs  agent_default_modules.rs  apply_domain_event_guards.rs  audit.rs  basic.rs  body.rs  builtin_wasm_identity.rs  data_access_control.rs  economy.rs  economy_bootstrap.rs  economy_factory_lifecycle.rs  economy_module_requests.rs  economy_module_validation_tests.rs  economy_priority_governance_tests.rs  economy_priority_logistics.rs  gameplay_protocol.rs  gameplay_protocol_core.rs  gameplay_protocol_policy_tests.rs  gameplay_protocol_split_part1.rs  gameplay_protocol_split_part2.rs  governance.rs  governance_validator_admission.rs  main_token.rs  main_token_core_tests.rs  main_token_governance_tests.rs  mod.rs  module_action_loop.rs  module_action_loop_core.rs  module_action_loop_market_tests.rs  module_action_loop_regressions.rs  module_action_loop_release_controls.rs  module_action_loop_release_controls_tests.rs  module_action_loop_split_part1.rs  module_action_loop_validation.rs  module_runtime_metering.rs  modules.rs  modules_permissions.rs  modules_permissions_policy_hooks.rs  (+14 more)
crates/oasis7/src/runtime/world/: agent_claims.rs  economy.rs  event_processing.rs  governance.rs  governance_internal.rs  governance_validator_admission.rs  mod.rs  module_actions_impl_part1.rs  module_actions_impl_part2.rs  module_runtime.rs  module_runtime_labels.rs  module_tick_runtime.rs  persistence.rs  persistence_support.rs  resources.rs  restricted_claim_grants.rs  step.rs
crates/oasis7/src/simulator/: asteroid_fragment.rs  chunking.rs  decision_provider.rs  decision_provider_support.rs  frag_spawn.rs  init.rs  llm_agent.rs  mod.rs  module_visual.rs  native_resolution.rs  openclaw_local_http.rs  persist.rs  provider_loopback_adapter.rs  provider_loopback_http.rs  scenario.rs  world_model.rs  world_model_config.rs
crates/oasis7/src/simulator/kernel/: actions.rs  actions_core.rs  actions_impl_part3.rs  actions_regressions.rs  actions_resolution.rs  fragment_replenish.rs  mod.rs  replay.rs
crates/oasis7/src/simulator/llm_agent/: behavior_guardrails.rs  behavior_prompt_modules.rs  behavior_runtime_helpers.rs  decision_flow.rs  openai_payload.rs  prompt_assembly.rs  tests.rs  tests_conversation_flow.rs  tests_edge_cases.rs  tests_followups.rs  tests_followups_actions.rs  tests_followups_memory.rs  tests_followups_provider.rs  tests_followups_regressions.rs  tests_part2_split_part2.rs  tests_part2_split_part3.rs  tests_part2_split_part4.rs  tests_part3_module_lifecycle.rs  tests_response_tools.rs  tests_split_part1.rs  tests_split_part2.rs  tests_tool_execution.rs
crates/oasis7/src/simulator/tests/: basics.rs  (+30 more)
crates/oasis7/src/viewer/: auth.rs  auth_tests.rs  gameplay_actions.rs  live.rs  live_controls.rs  live_runtime.rs  live_split_part1.rs  mod.rs  runtime_live.rs  server.rs  web_bridge.rs
crates/oasis7/tests/: module_input_cbor.rs  module_lifecycle.rs  module_release_sla_triad.rs  module_state.rs  module_store.rs  module_subscription_filters.rs  wasm_executor.rs
crates/oasis7_distfs/: Cargo.toml
crates/oasis7_distfs/src/: lib.rs  lib_tests.rs
crates/oasis7_net/: Cargo.toml
crates/oasis7_net/src/: bootstrap.rs  client.rs  dht.rs  dht_cache.rs  execution_storage.rs  head_validation.rs  lib.rs  libp2p_net.rs  observer.rs  observer_metrics.rs  observer_replay.rs  replica_maintenance.rs  tests.rs  tests_libp2p_discovery.rs  tests_libp2p_helpers.rs  tests_libp2p_traffic.rs  tests_module_fetch.rs
crates/oasis7_net/src/libp2p_net/: api.rs  config.rs  connection_lifecycle.rs  constructor_support.rs  discovery.rs  error_mapping.rs  kad_queries.rs  peer_manager.rs  peer_manager_active_set.rs  peer_record.rs  peer_record_republish.rs  reachability.rs  runtime_loop.rs  swarm_behaviour.rs  swarm_reachability_events.rs  tests.rs  traffic_metrics.rs  transport_paths.rs  transport_retry_tests.rs  utils.rs  wire_bytes.rs
crates/oasis7_wasm_executor/: Cargo.toml
crates/oasis7_wasm_executor/src/: lib.rs  metrics.rs  tests.rs
crates/pixel_world_bridge/: Cargo.toml
crates/pixel_world_bridge/src/: lib.rs  render.rs
tools/wasm_module_observe/: Cargo.toml
tools/wasm_module_observe/src/: lib.rs  main.rs  report.rs  spec.rs
tools/wasm_module_observe/tests/: m1_rule_move.rs
(+1959 files in other folders)
