[workspace]
members = [
    "crates/oasis7",
    "crates/oasis7_client_launcher",
    "crates/oasis7_launcher_ui",
    "crates/oasis7_consensus",
    "crates/oasis7_distfs",
    "crates/oasis7_net",
    "crates/oasis7_node",
    "crates/oasis7_proto",
    "crates/oasis7_wasm_abi",
    "crates/oasis7_wasm_executor",
    "crates/oasis7_wasm_sdk",
    "crates/oasis7_wasm_router",
    "crates/oasis7_wasm_store",
    "crates/oasis7_viewer",
]
resolver = "2"

[profile.dev.package.epaint]
# On wasm32-unknown-unknown, `std::time::Instant` is unavailable.
# epaint's debug deadlock checks call `parking_lot::try_*_for`, which panics there.
debug-assertions = false

[patch.crates-io]
egui-winit = { path = "vendor-egui-winit-0.33.3" }
