[package]
name = "oasis7"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
oasis7_proto = { path = "../oasis7_proto" }
oasis7_wasm_abi = { path = "../oasis7_wasm_abi" }
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
blake3 = "1"
multiaddr = "0.18"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
oasis7_distfs = { path = "../oasis7_distfs" }
oasis7_launcher_ui = { path = "../oasis7_launcher_ui" }
oasis7_node = { path = "../oasis7_node" }
oasis7_wasm_executor = { path = "../oasis7_wasm_executor", default-features = false }
oasis7_wasm_router = { path = "../oasis7_wasm_router" }
oasis7_wasm_store = { path = "../oasis7_wasm_store" }
async-openai = { version = "0.32.4", default-features = false, features = ["responses", "rustls"] }
ctrlc = { version = "3.4", features = ["termination"] }
futures-util = "0.3"
hmac = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tungstenite = "0.21"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["wasmtime"]
wasmtime = ["oasis7_wasm_executor/wasmtime"]
viewer_live_integration = []
self_tests = []
test_tier_required = []
test_tier_full = ["test_tier_required"]
