[package]
name = "oasis7_distfs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
oasis7_proto = { path = "../oasis7_proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
blake3 = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
zstd = "0.13"
