[package]
name = "oasis7_wasm_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis7_wasm_abi = { path = "../oasis7_wasm_abi" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
sha2 = "0.10"

wasmtime = { version = "41", optional = true }

[features]
default = []
wasmtime = ["dep:wasmtime"]

[dev-dependencies]
wat = "1"
